; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_mdoc_markdown.c_md_named.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_mdoc_markdown.c_md_named.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"&%s;\00", align 1
@ESC_FON = common dso_local global i32 0, align 4
@ESC_EOL = common dso_local global i32 0, align 4
@escflags = common dso_local global i32 0, align 4
@outcount = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @md_named to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @md_named(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 @printf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %3)
  %5 = load i32, i32* @ESC_FON, align 4
  %6 = load i32, i32* @ESC_EOL, align 4
  %7 = or i32 %5, %6
  %8 = xor i32 %7, -1
  %9 = load i32, i32* @escflags, align 4
  %10 = and i32 %9, %8
  store i32 %10, i32* @escflags, align 4
  %11 = load i32, i32* @outcount, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* @outcount, align 4
  ret void
}

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
